# AEDS2-TP2

./: leiame.txt  meson.build
scripts/: col.py  dados.py  example.py  runner.sh  txttoyml.py
src/: heapsort.c  insertionsort.c  mergesort.c  meson.build  quicksort.c  runner.c  runner.h  selectionsort.c  shellsort.c
